[package]
name = "highres-service"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-bigint-dig = { version = "0.8.4", features = ["rand"] }
num-integer = "0.1.46"
rand = "0.8.5"
rand_core = "0.6.4"
rsa = { path = "crates/RSA" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
